--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -21,4 +21,5 @@
   </ion-card>
   <h1>{{isdata}}</h1>
   <button ion-button (click)="takePicture()">Take a Picture</button>
+  <button ion-button (click)="moveToList()">Move to list</button>
 </ion-content>
